# libbus

./: AUTHORS  README.md  configure.ac  pkg-config.pc.in
examples/: main.cpp
include/: Makefile.am
include/kizbox/application/freedesktop/dbus/: Manager.h
include/kizbox/application/freedesktop/dbus/bus/: Manager.h
include/kizbox/framework/bus/: Connection.h.in  Introspectable.h  Message.h  Object.h.in  Type.h
src/: Connection.cpp  Makefile.am  Message.cpp  Object.cpp  Type.cpp
src/freedesktop/dbus/bus/: Manager.cpp
