#
# Headers
#

# Headers to install
frameworkdir =      ${includedir}/kizbox/framework/bus
framework_HEADERS = ./kizbox/framework/bus/Connection.h \
                    ./kizbox/framework/bus/Introspectable.h \
                    ./kizbox/framework/bus/Message.h \
                    ./kizbox/framework/bus/Object.h \
                    ./kizbox/framework/bus/Type.h

applicationdir =      ${includedir}/kizbox/application/freedesktop/dbus
application_HEADERS = kizbox/application/freedesktop/dbus/Manager.h

applicationbusdir =      ${applicationdir}/bus
applicationbus_HEADERS = kizbox/application/freedesktop/dbus/bus/Manager.h
